[package]
name = "wp2l2d"
version = "0.2.0"
authors = ["Nurahmadie <nurahmadie@gmail.com>"]
edition = "2018"

[lib]
name = "wp2l2d"
path = "src/lib.rs"

[[bin]]
name = "wp2l2d"
path = "src/main.rs"


[dependencies]
actix-web = "1.0"
awc = { version = "0.2", features = ["rust-tls"] }
chrono = "0.4"
env_logger = "0.6"
envy = "0.4"
futures = "0.1"
quick-xml = "0.15"
rss = "1.8"
serde = "1.0"
serde_derive = "1.0"
